--- a/proyecto2Datos/src/vista/VentanaPrincipal.form
+++ b/proyecto2Datos/src/vista/VentanaPrincipal.form
@@ -13,6 +13,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cargar Mapa Heredia"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemMapHerediaActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemMapCartago">
               <Properties>
