--- a/proyecto2Datos/src/vista/VentanaPrincipal.form
+++ b/proyecto2Datos/src/vista/VentanaPrincipal.form
@@ -39,6 +39,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Gestor de rutas minimas, para repartidores"/>
     <Property name="name" type="java.lang.String" value="Mapa" noResource="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
@@ -89,7 +90,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="550" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="568" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -105,19 +106,17 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabel1" pref="103" max="32767" attributes="0"/>
+                      <Component id="jLabel1" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jButtonAgregarRepartidor" min="-2" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jTextFieldAgregarRepartidor" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jTextFieldPSalida" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jTextFieldPLlegada" max="32767" attributes="0"/>
-                              </Group>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="jButtonEmpezarRuta" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                              <Component id="jTextFieldIdRepatidor" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jTextFieldPuntoInicio" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jTextFieldPuntoDestino" alignment="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
@@ -132,18 +131,18 @@
                   <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jTextFieldAgregarRepartidor" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTextFieldIdRepatidor" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
-                  <Component id="jTextFieldPSalida" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTextFieldPuntoInicio" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jTextFieldPLlegada" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jButtonAgregarRepartidor" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="246" max="32767" attributes="0"/>
+                  <Component id="jTextFieldPuntoDestino" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                  <Component id="jButtonEmpezarRuta" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="238" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -151,29 +150,32 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Agregar Repartidor:"/>
+            <Property name="text" type="java.lang.String" value="Id Repartidor"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Punto de salida"/>
+            <Property name="text" type="java.lang.String" value="Inicio"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Punto de llegada"/>
+            <Property name="text" type="java.lang.String" value="Destino"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextFieldAgregarRepartidor">
+        <Component class="javax.swing.JTextField" name="jTextFieldIdRepatidor">
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextFieldPSalida">
+        <Component class="javax.swing.JTextField" name="jTextFieldPuntoInicio">
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextFieldPLlegada">
+        <Component class="javax.swing.JTextField" name="jTextFieldPuntoDestino">
         </Component>
-        <Component class="javax.swing.JButton" name="jButtonAgregarRepartidor">
+        <Component class="javax.swing.JButton" name="jButtonEmpezarRuta">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Agregar"/>
+            <Property name="text" type="java.lang.String" value="Empezar ruta"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonEmpezarRutaActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
